Almost complete CSS Position (Relative, Absolute) - still need to do the challenges

--- a/html-css-course/css-position/styles/header.css
+++ b/html-css-course/css-position/styles/header.css
@@ -8,6 +8,7 @@
   top: 0;
   left: 0;
   right: 0;
+  z-index: 100;
 
   background-color: white;
   border-bottom-width: 1px;
@@ -104,6 +105,23 @@
 
 .notif-icon {
   height: 24px;
+}
+
+.notif-icon-container {
+  position: relative;
+}
+
+.notif-count {
+  position: absolute;
+  font-family: Roboto, Arial;
+  font-size: 11px;
+  padding-block: 2px;
+  padding-inline: 5px;
+  border-radius: 20px;
+  background-color: rgb(200, 0, 0);
+  color: white;
+  top: -2px;
+  right: -3px;
 }
 
 .my-channel-icon {
