--- a/html-css-course/css-position/styles/video.css
+++ b/html-css-course/css-position/styles/video.css
@@ -51,4 +51,18 @@
 
 .thumbnail-row {
   margin-bottom: 12px;
+  position: relative;
+}
+
+.video-time {
+  background-color: black;
+  color: white;
+  font-family: Roboto, Arial;
+  font-size: 12px;
+  font-weight: 500;
+  border-radius: 2px;
+  padding: 4px;
+  position: absolute;
+  right: 5px;
+  bottom: 8px;
 }
